# Bogota-Apartments-Rework

./: .gitignore  README.md
bogota-apartments/: README.md  pyproject.toml  scrapy.cfg
bogota-apartments/config/: logging.conf  settings.py
bogota-apartments/scripts/: run_full_pipeline.py  run_processing.py  run_scraping.py
bogota-apartments/src/: main.py
bogota-apartments/src/data_creation/: create_poi.py
bogota-apartments/src/processing/: data_cleaner.py  data_enricher.py  feature_extractor.py  geo_data_corrector.py  geo_data_enricher.py
bogota-apartments/src/scrapers/: __init__.py  base_scraper.py  habi_scraper.py  metrocuadrado_scraper.py  pipelines.py
bogota-apartments/src/utils/: config.py  logger.py
bogota-apartments/tests/: test_scrapers.py
