[tool.poetry]
name = "bogota-apartments"
version = "0.1.0"
description = ""
authors = ["JsNcAr <jn.arias@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.13.1"
fake-useragent = "^2.2.0"
selenium = "^4.33.0"
unidecode = "^1.4.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
